# blvm-secp256k1

./: .gitignore  COPYING  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
asm/: field_10x26_arm.s  scalar_4x64_x86_64.s
examples/: regenerate_precomputed.rs
src/: ecdh.rs  ecdsa.rs  ecmult.rs  ecmult_precomputed.rs  ellswift.rs  group.rs  lib.rs  modinv64.rs  musig.rs  scalar.rs  schnorr.rs  schnorr_half_agg.rs  taproot.rs
src/field/: layout_10x26.rs  layout_5x52.rs  mod.rs
tests/: ecdsa_tests.rs  ecmult_tests.rs  field_tests.rs  group_tests.rs  scalar_tests.rs  schnorr_half_agg_tests.rs  schnorr_tests.rs  taproot_tests.rs
