[package]
name = "blvm-secp256k1"
version = "0.1.1"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Rust reimplementation of libsecp256k1 with ASM for hot paths. Performance-optimized secp256k1 for Bitcoin/Ethereum."
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-secp256k1"
keywords = ["secp256k1", "bitcoin", "ecdsa", "schnorr", "cryptography"]
categories = ["cryptography::cryptographic-primitives"]
rust-version = "1.70"

[lib]
name = "blvm_secp256k1"
path = "src/lib.rs"

[dependencies]
subtle = "2.5"
sha2 = { version = "0.10", features = ["asm"] }
num-bigint = "0.4"
num-integer = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"
hex = "0.4"

[profile.release]
lto = false
codegen-units = 16

[features]
default = ["std"]
std = []

